add in marked as an example of how to inject bower artifacts into my-app-seed

--- a/my-app-seed-war/src/main/webapp/my-app/view-home/view-home.html
+++ b/my-app-seed-war/src/main/webapp/my-app/view-home/view-home.html
@@ -42,6 +42,11 @@
                     <subview-directive></subview-directive>
                 </md-content>
             </md-tab>
+            <md-tab class="md-primary" label="Marked Tab">
+              <md-content class="md-padding">
+                <ng-include src="'/my-app/view-home/partials/marked-tab-content.html'"></ng-include>
+              </md-content>
+            </md-tab>
         </md-tabs>
     </md-content>
 </frame-page>
